Werkzeug Changelog
==================

Version 0.11.11
---------------

Bugfix release, unreleased.

- Fix JSONRequestMixin for Python3. See #731
- Fix broken string handling in test client when passing integers. See #852

Version 0.11.10
---------------

Released on May 24th 2016.

- Fixed a bug that occurs when running on Python 2.6 and using a broken locale.
  See pull request #912.
- Fixed a crash when running the debugger on Google App Engine. See issue #925.
- Fixed an issue with multipart parsing that could cause memory exhaustion.

Version 0.11.9
--------------

Released on April 24th 2016.

- Corrected an issue that caused the debugger not to use the
  machine GUID on POSIX systems.
- Corrected an Unicode error on Python 3 for the debugger's
  PIN usage.
- Corrected the timestamp verification in the pin debug code.
  Without this fix the pin was remebered until too long.

Version 0.11.8
--------------

Released on April 15th 2016.

- fixed a problem with the machine GUID detection code on OS X
  on Python 3.

Version 0.11.7
--------------

Released on April 14th 2016.

- fixed a regression on Python 3 for the debugger.

Version 0.11.6
--------------

Released on April 14th 2016.

- werkzeug.serving: Still show the client address on bad requests.
- improved the PIN based protection for the debugger to make it harder to
  brute force via trying cookies.  Please keep in mind that the debugger
  *is not intended for running on production environments*
- increased the pin timeout to a week to make it less annoying for people
  which should decrease the change that users disable the pin check
  entirely.
- werkzeug.serving: Fix broken HTTP_HOST when path starts with double slash.

Version 0.11.5
--------------

Released on March 22nd 2016.

- werkzeug.serving: Fix crash when attempting SSL connection to HTTP server.

Version 0.11.4
--------------

Released on February 14th 2016.

- Fixed werkzeug.serving not working from -m flag.