@@ -29,6 +29,7 @@ Project Leader / Developer:
 - Markus Unterwaditzer
 - Joe Esposito <joe@joeyespo.com>
 - Cédric Krier
+- Lars Holm Nielsen
 
 Contributors of code for werkzeug/examples are:
 
